syntax = "proto3";

package pb;
import "google/protobuf/field_mask.proto";

option go_package = "portfolio-playground/pkg/proto;pb";

// Enum Unit
enum Unit {
  UNIT_UNSPECIFIED = 0;
  GRAM = 1;
  KILOGRAM = 2;
  MILLILITER = 3;
  LITER = 4;
  TEASPOON = 5;
  TABLESPOON = 6;
  CUP = 7;
  PINCH = 8;
  PIECE = 9;
}

// Message Ingredient
message Ingredient {
    int64 id = 1;
    string name = 2;
    float quantity = 3;
    Unit unit = 4;
}

// Message Recipe
message Recipe {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string instructions = 4;
  repeated Ingredient ingredients = 5;
  string author_id = 6;
}

// Create
message CreateRecipeRequest {
  Recipe recipe = 1;
}
message CreateRecipeResponse {
  Recipe recipe = 1;
}

// Get
message GetRecipeRequest {
  int64 id = 1;
}
message GetRecipeResponse {
  Recipe recipe = 1;
}

// Update
message UpdateRecipeRequest {
  int64 id = 1;
  Recipe recipe = 2;
  google.protobuf.FieldMask update_mask = 3;
}
message UpdateRecipeResponse {
  Recipe recipe = 1;
}

// Delete
message DeleteRecipeRequest {
  int64 id = 1;
}
message DeleteRecipeResponse {}

// List
message ListRecipesRequest {
  int32 page_size = 1;
  int32 page_token = 2;
}
message ListRecipesResponse {
  repeated Recipe recipes = 1;
  int32 next_page_token = 2;
}

// Create
message CreateIngredientRequest {
  Ingredient ingredient = 1;
}
message CreateIngredientResponse {
  Ingredient ingredient = 1;
}

// Get
message GetIngredientRequest {
  int64 id = 1;
}
message GetIngredientResponse {
  Ingredient ingredient = 1;
}

// Update
message UpdateIngredientRequest {
  int64 id = 1;
  Ingredient ingredient = 2;
  google.protobuf.FieldMask update_mask = 3;
}
message UpdateIngredientResponse {
  Ingredient ingredient = 1;
}

// Delete
message DeleteIngredientRequest {
  int64 id = 1;
}
message DeleteIngredientResponse {}

// List
message ListIngredientsRequest {
  int32 page_size = 1;
  int32 page_token = 2;
  string name = 3;
}
message ListIngredientsResponse {
  repeated Ingredient ingredients = 1;
  int32 next_page_token = 2;
}
